--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,45 +8,43 @@
     <link rel="stylesheet" href="style.css">
     <title>Meu portfólio</title>
 </head>
-
 <body>
     <header class="container text-center">
-        <img src="avatar.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
-            srcset="">
-        <p class="lead">Eu sou João Pedro Bueno</p>
+        <img src="avatar.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
+        <p class="lead"><h3>Eu sou João Pedro Bueno</h3></p>
         <h1>Técnico de TI. inicante.</h1>
-        <p>Sou um técnico recem formado com poucos projetos de programação na carreira.</p>
+        <h2>Sou um técnico rescém formado com poucos projetos de programação na carreira.</h2>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
+            <span class="badge bg-secondary">HTML</span>
+            <span class="badge bg-secondary">CSS</span>
+            <span class="badge bg-secondary">JavaScript</span>
         </div>
     </header>
     <main class="container mt-5">
         <h2>Meus projetos</h2>
         <div class="row">
             <!-- Projeto 1 -->
-            <div class="col-md-4">
+            <div class="col-12">
                 <div class="card">
                     <img src="projeto 1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Wiki Gachiakuta: Wiki especializada</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta informações sobre mangá Gachiakuta que aos poucos está alcançando 
-                            o pés dos maiorais como Jujutsu Kaisen, Naruto entre outros.</p>
+                            os pés das maiorais como Jujutsu Kaisen, Naruto entre outros.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
                     </div>
                 </div>
             </div>
             <!-- Projeto 2 -->
-            <div class="col-md-4">
+            <div class="col-12">
                 <div class="card">
                     <img src="projeto 2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Singulartoon: Webpage </h5>
-                        <p class="card-text">Este projeto é um site que junta varios mangás que estão em alta no momento
-                            e junta, popularidade, críticas especializada e popular e recomenda outros mangás parecidos 
+                        <p class="card-text">Este projeto é um site que junta vários mangás que estão em alta no momento
+                            e junta, popularidade, críticas especializadas e popular e recomenda outros mangás parecidos 
                             caso queira ler mais.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
@@ -56,6 +53,19 @@
                 </div>
             </div>
         </div>
+         <!-- Projeto 3 -->
+         <div class="col-12">
+            <div class="card">
+                <img src="projeto 3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                <div class="card-body">
+                    <h5 class="card-title">Portfólio Bleach </h5>
+                    <p class="card-text">Este projeto é um portfólio sobre uma obra amada e também odiada por outros, esse é um jeito de apresenta-lá para
+                        mais pessoas, até mesmo quem nem goste de anime.
+                    </p>
+                    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                        o projeto</button>
+                </div>
+            </div>
     </main>
 
     <!-- Modal 1 -->
@@ -132,6 +142,53 @@
                         tecnologia em nossas vidas.
                     </p>
                     <img src="projeto 2.png" class="img-fluid w-100"
+                        alt="Imagem representativa do projeto de uma biblioteca online">
+                </div>
+                <div class="modal-footer">
+                    <a href="">Ver projeto ao
+                        vivo</a>
+                    <a href="https://github.com/joaoped3/Singulartoon.git">Ver código do
+                        projeto</a>
+                </div>
+            </div>
+        </div>
+    </div>
+     <!-- Modal 3 -->
+     <div class="modal" id="modal3" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que
+                        simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é
+                        engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis
+                        consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.
+                    </p>
+                    <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de
+                        perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS
+                        é utilizado para estilizar a página, empregando um esquema de cores futurista e layout
+                        responsivo para melhorar a experiência do usuário. JavaScript é usado para adicionar
+                        interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da página conforme as
+                        escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e
+                        respostas.</p>
+                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
+                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
+                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
+                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
+                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
+                        tela.</p>
+                    <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as
+                        lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas
+                        dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a
+                        expansão futura do jogo. A importância das ferramentas utilizadas (HTML, CSS, JavaScript) reside
+                        na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores
+                        sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
+                        tecnologia em nossas vidas.
+                    </p>
+                    <img src="projeto 3.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
